--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,12 +1,7 @@
 	<footer class="container-fluid">
+	<div class="container" style="margin-top:10px;margin-bottom:10px;">
 		<div class="row">
-			<div class="col-lg-3">
-				<img class="codeshala-logo" src="assets/images/site_logo.png"><br/>
-				GET BETTER AT PROGRAMING<br/><br/>
-				&copy; HoneyByte 2018<br/>
-				<a href="" style="color:#7f7f7f;">T&C</a> | <a href="" style="color:#7f7f7f;">Privacy policy</a> 
-			</div>
-			<div class="col-lg-9" style="valign:top">
+			<div class="col-lg-8" style="valign:top;">
 				<div class="row">
 					<div class="col-lg-2 text-left">
 						<h3 class="footer-links-title">COMPANY</h3>
@@ -91,5 +86,14 @@
 					
 				</div>
 			</div>
+			<div class="col-lg-3">
+				<img class="codeshala-logo" src="/assets/images/site_logo.png"><br/>
+				GET BETTER AT PROGRAMING<br/><br/>
+				&copy; HoneyByte 2018<br/>
+				<a href="" style="color:#7f7f7f;">T&C</a> | <a href="" style="color:#7f7f7f;">Privacy policy</a> 
+			</div>
+		</div>
+		<hr/ style="background-color:#262626;height:2px;">
+		<p class="text-left">We are community of programmers. Our community is lead by professionals who have broad experience in competitve programming and software development. Our community mentors are working at top companies and providing mentorship to candidates across different colleges. We provide learning courses to make you a better programmer.</p>
 		</div>
 	</footer>
